--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.26.1",
 		"react-toastify": "^10.0.5",
+		"react-top-loading-bar": "^2.3.1",
 		"reactjs-popup": "^2.0.6",
 		"redux-persist": "^6.0.0"
 	},
