--- a/package.json
+++ b/package.json
@@ -12,19 +12,22 @@
 	},
 	"dependencies": {
 		"@ant-design/icons": "^5.4.0",
+		"@hookform/resolvers": "^3.9.1",
 		"@reduxjs/toolkit": "^2.2.7",
 		"axios": "^1.7.7",
 		"firebase": "^10.13.1",
 		"jwt-decode": "^4.0.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.53.2",
 		"react-icons": "^5.3.0",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.26.1",
 		"react-toastify": "^10.0.5",
 		"react-top-loading-bar": "^2.3.1",
 		"reactjs-popup": "^2.0.6",
-		"redux-persist": "^6.0.0"
+		"redux-persist": "^6.0.0",
+		"yup": "^1.4.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
